<resources>
    <string name="app_name">Intent</string>
    <string name="bt_apps">Apps</string>
    <string name="bt_settings">Settings</string>
    <string name="bt_vibrate">Vibrate</string>
    <string name="bt_spapp">Specific App</string>
    <string name="bt_developer">Developer</string>
    <string name="bt_search">Search</string>
    <string name="bt_wifi">Wi-Fi</string>
    <string name="bt_bluetooth">Bluetooth</string>
    <string name="bt_account">Add Account</string>
</resources>
