<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/Height"
        android:text="@string/bt_spapp"
        android:id="@+id/bt_spapp"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center_horizontal"  />

    <Button
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/Height"
        android:text="@string/bt_developer"
        android:id="@+id/bt_developer"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center_horizontal"  />

    <EditText
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:id="@+id/et_search"
        android:layout_gravity="center_horizontal"
        android:hint="@string/bt_search" />

    <Button
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/Height"
        android:text="@string/bt_search"
        android:id="@+id/bt_search"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/margin"
        android:layout_gravity="center_horizontal"  />
</LinearLayout>